Fix header alignment

--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@
   h1,
   h2,
   h3 {
-    @apply mb-6 font-bold;
+    @apply font-bold;
   }
 
   h1 {
@@ -20,6 +20,7 @@
   h2 {
     @apply text-xl;
   }
+
   h3 {
     @apply text-lg;
   }
